# LLM

./: pyproject.toml
llm/: document.txt  part1_prompting.py  part2_structured.py  part3_rag.py
