[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["mist258 <natalia.kolchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
groq = "^1.0.0"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
numpy = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
